   =js2-object-property=, =js2-warning=.

** ADDED Some company-mode faces

   Add the Company faces: =company-preview=, =company-preview-common=,
   =company-scrollbar-bg=, =company-scrollbar-fg=, =company-tooltip=,
   =company-tooltip-annotation=, =company-tooltip-common=,
   =common-tooltip-search=, =common-tooltip-search-selecion=,
   =common-tooltip-selection=.

** CHANGED the color of high-scoring unread mails in gnus

** CHANGED the color of normal ticked mails in gnus

** CHANGED the padding around the mode-line

** CHANGED the JS2 function param face color

   Inherit from =font-lock-warning-face= and don't specify a special
   underline.

** CHANGED the Diff Highlight faces

   Make the foreground and background color on the =diff-hl-change=,
   =diff-hl-add= and =diff-hl-remove= the same.

** CHANGED the top 3 Org heading faces

   Make the =org-level-1=, =org-level-2= and =org-level-3= stand out
   more by giving them and underline, bold weight and italic slant
   respectively. Also give the =org-level-1= and =org-level-2= some
   extra height.

** REMOVED the 10th rainbow delimiters depth face

* [[https://github.com/ryuslash/yoshi-theme/compare/v6.0.0...v6.1.0][6.1.0]] -- 2015-11-20
  :PROPERTIES:
  :CUSTOM_ID: release-6.1.0
  :END:
** ADDED Some helm faces

   Add the helm faces: =helm-M-x-key=, =helm-buffer-directory=,
   =helm-buffer-file=, =helm-buffer-not-saved=, =helm-buffer-process=,
   =helm-buffer-size=, =helm-match=, =helm-selection=, =helm-source-header=,
   =helm-ff-directory=, =helm-ff-dotted-directory=, =helm-ff-executable=,
   =helm-ff-file=, =helm-ff-invalid-symlink=, =helm-ff-symlink=.

** ADDED Some circe faces

   Add the circe faces: =circe-highlight-nick-face= and
   =circe-server-face=.

** ADDED Some lui faces

   Add the lui faces: =lui-button-face=, =lui-time-stamp-face=.

** ADDED CSS faces

   Add the CSS faces: =css-property=, =css-selector= and
   =css-proprietary-property=.

** ADDED =magit-section-highlight= face
